# greenautarky-onboarding

./: .gitignore  CHANGELOG.md  README.md  frontend.lock.yaml  pyproject.toml
.github/workflows/: ci.yml  device-tests.yml  produce-bundle.yml  release.yml
docs/: API.md  ARCHITECTURE.md  MASTER-USER-MANAGEMENT.md  SECURITY.md  STAGE-B-LEAK-WRAPPER.md
scripts/: build_bundle.sh
src/greenautarky_onboarding/: BUILD.md  __init__.py  config_flow.py  consent.py  consent_page.html  const.py  dashboards.py  entity_scope.py  http.py  leak_guard.py  manifest.json  master_console_page.html  password_reset_page.html  repairs.py  rooms.py  sub_user_join_page.html
src/greenautarky_onboarding/frontend_bundle/: BUILD-INFO.txt  SHA256SUMS  ga-onboarding-redirect.js  greenautarky-setup.html
src/greenautarky_onboarding/translations/: en.json
src/greenautarky_site/: BUILD.md  __init__.py  config_flow.py  consent_page.html  consent_views.py  console_login.py  const.py  entity_scope.py  http.py  manifest.json  master_console_page.html  password_reset_page.html  rooms.py  store.py
src/greenautarky_site/frontend_bundle/: SHA256SUMS  ga-onboarding-redirect.js  greenautarky-setup.html
src/greenautarky_site/household/: __init__.py  (+3 more)
tests/: conftest.py  test_console_login_secret_migration.py  test_entity_scope.py  test_leak_guard.py  test_manifest_consistency.py  test_personal_dashboards.py  test_pin_migration.py  test_rooms.py  test_setup.py  test_sub_user_join.py  test_sub_user_manage.py
tests/device/: README.md  test_entity_scope_device.py  test_personal_dashboards_device.py
tests/e2e/: conftest.py  test_entity_scope_e2e.py  test_personal_dashboard_e2e.py
(+1771 files in other folders)
